2019-03-10  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/71544
	Backport from trunk
	* trans-types.c (gfc_typenode_for_spec) Set ts->is_c_interop of
	C_PTR and C_FUNPTR.
	(create_fn_spec): Mark argument as escaping if ts->is_c_interop is set.

2019-03-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
	Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/87734
	Backort from trunk
	* symbol.c (gfc_add_procedure): Only throw an error if the
	procedure has not been declared either PUBLIC or PRIVATE.
	* resolve.c (is_illegal_recursion): Remove an assert().

2019-03-06  Harald Anlauf  <anlauf@gmx.de>

	Backport from trunk
	PR fortran/71203
	* expr.c (simplify_const_ref): Avoid null pointer dereference.

2019-03-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/72714
	Backport from trunk
	* resolve.c (resolve_allocate_expr): Add some tests for coarrays.

2019-03-03  Harald Anlauf  <anlauf@gmx.de>

	Backport from trunk
	PR fortran/89077
	* decl.c (gfc_set_constant_character_len): Clear original string
	representation after padding has been performed to target length.
	* resolve.c (gfc_resolve_substring_charlen): Check substring
	length for constantness prior to general calculation of length.

2019-03-03  Harald Anlauf  <anlauf@gmx.de>
	    Steven G. Kargl  <kargl@gcc.gnu.org>

	Backport from trunk
	PR fortran/77583
	* symbol.c (check_conflict): Check for valid procedure name
	passed to error reporting routine.

2019-03-03  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/89174
	Backport from trunk
	* trans-expr.c (gfc_find_and_cut_at_last_class_ref): Add is_mold
	to garguments. If we are dealing with a MOLD, call
	gfc_expr_to_initialize().
	* trans-stmt.c (gfc_trans_allocate): For MOLD, pass is_mold=true
	to gfc_find_and_cut_at_last_class_ref.
	* trans.h (gfc_find_and_cut_at_last_class_ref): Add optional
	argument is_mold with default false.

2019-03-03  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/87689
	Backport from trunk