@@ -1,3 +1,9 @@
+2019-03-13  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/87673
+	Backport from trunk
+	* gfortran.dg/charlen_17.f90: New test.
+
 2019-03-13  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR target/85860
